--- a/package.json
+++ b/package.json
@@ -6,16 +6,30 @@
     "start": "next start"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-accordion": "^1.2.4",
+    "@radix-ui/react-label": "^2.1.3",
+    "@radix-ui/react-select": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-switch": "^1.2.2",
+    "@radix-ui/react-tabs": "^1.1.9",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "autoprefixer": "10.4.17",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "geist": "^1.2.1",
+    "lucide-react": "^0.488.0",
     "next": "latest",
     "postcss": "8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.55.0",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss": "3.4.1",
-    "typescript": "5.3.3"
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "5.3.3",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/node": "20.11.5",
