--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "@phosphor-icons/react": "^2.1.7",
+    "@prisma/client": "^6.6.0",
     "@radix-ui/react-accordion": "^1.2.4",
     "@radix-ui/react-label": "^2.1.3",
     "@radix-ui/react-select": "^2.1.7",
@@ -25,6 +27,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.55.0",
+    "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "3.4.1",
     "tailwindcss-animate": "^1.0.7",
@@ -35,6 +38,7 @@
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
-    "encoding": "^0.1.13"
+    "encoding": "^0.1.13",
+    "prisma": "^6.6.0"
   }
 }
