--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.55.0",
     "react-responsive-carousel": "^3.2.23",
+    "react-simple-star-rating": "^5.1.7",
     "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "3.4.1",
