--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
     "@phosphor-icons/react": "^2.1.7",
-    "@prisma/client": "^6.6.0",
+    "@prisma/client": "^6.7.0",
     "@radix-ui/react-accordion": "^1.2.4",
     "@radix-ui/react-label": "^2.1.3",
     "@radix-ui/react-select": "^2.1.7",
@@ -27,6 +27,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.55.0",
+    "react-paginate": "^8.3.0",
     "react-responsive-carousel": "^3.2.23",
     "react-simple-star-rating": "^5.1.7",
     "react-toastify": "^11.0.5",
@@ -41,6 +42,6 @@
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
     "encoding": "^0.1.13",
-    "prisma": "^6.6.0"
+    "prisma": "^6.7.0"
   }
 }
