--- a/package.json
+++ b/package.json
@@ -17,16 +17,19 @@
     "@radix-ui/react-tabs": "^1.1.9",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "@types/leaflet": "^1.9.17",
     "autoprefixer": "10.4.17",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "geist": "^1.2.1",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
     "lucide-react": "^0.488.0",
     "next": "latest",
     "postcss": "8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.55.0",
+    "react-leaflet": "^4.2.1",
     "react-paginate": "^8.3.0",
     "react-responsive-carousel": "^3.2.23",
     "react-simple-star-rating": "^5.1.7",
