--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.55.0",
     "react-leaflet": "^4.2.1",
+    "react-loader-spinner": "^6.1.6",
     "react-paginate": "^8.3.0",
     "react-responsive-carousel": "^3.2.23",
     "react-simple-star-rating": "^5.1.7",
